--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,6 @@
   width: 100%; /* Adjust the width as necessary */
   /* Add any other styling properties you require */
 }
+.shadow-custom{
+  box-shadow: (0, 0, 0, 0.25) 0px 2px 6px, rgba(0, 0, 0, 0.25) 0px 1px 2px
+}
